--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" class="no-js">
 <head>
-    <meta charset="UTF-8">
-    <title>Roxy Page</title>
+  <base target="_blank">
+  <meta charset="UTF-8" />
+  <title>Ry Christofer Pahente</title>
+  <link rel="shortcut icon" type="image/png" href="assets/favicon.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous" type="text/css">
+  <!-- remember, jQuery is completely optional -->
+  <!-- <script type='text/javascript' src='js/jquery-1.11.1.min.js'></script> -->
+  <script type="text/javascript" src="js/jquery.particleground.js"></script>
+  <script type="text/javascript" src="js/demo.js"></script>
 </head>
+
 <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
+
+<div id="particles">
+  <div id="intro">
+      <h2 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">Ry Christofer Pahente&nbsp</h2>
+      <h3 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">Full Stack Developer&nbsp</h3>
+        <hr style="width: 50%; background-color: #E83951; border-color: #E83951;">
+    <a href="https://www.linkedin.com/in/ry0x7/" style="color: white;"><i class="fab fa-linkedin" style="font-size: 2em;"></i></a>
+    &nbsp
+    <a href="https://www.facebook.com/chrisssry/" style="color: white;"><i class="fab fa-facebook" style="font-size: 2em;"></i></a>
+    &nbsp
+    <a href="https://github.com/Ry0x7" style="color: white;"><i class="fab fa-github" style="font-size: 2em;"></i></a>
+    &nbsp
+  </div>
+</div>
+
 </body>
 </html>
