--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <base target="_blank">
   <meta charset="UTF-8" />
-  <title>Ry Christofer Pahente</title>
+  <title>R0xy | Developer</title>
   <link rel="shortcut icon" type="image/png" href="assets/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css" />
@@ -18,8 +18,8 @@
 
 <div id="particles">
   <div id="intro">
-      <h2 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">Ry Christofer Pahente&nbsp</h2>
-      <h3 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">Full Stack Developer&nbsp</h3>
+      <h2 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">Ry | R0xy &nbsp</h2>
+      <h2 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">Full Stack Developer&nbsp</h3>
         <hr style="width: 50%; background-color: #E83951; border-color: #E83951;">
     <a href="https://www.linkedin.com/in/ry0x7/" style="color: white;"><i class="fab fa-linkedin" style="font-size: 2em;"></i></a>
     &nbsp
