modified:   index.html

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 
 <div id="particles">
   <div id="intro">
-      <h2 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">Hi 👋 I'm Roxy &nbsp</h2>
-      <h3 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">Full Stack Developer&nbsp</h3>
+    <h3 style="font-family: 'Courier New', monospace; font-weight: 10;">Hello👋&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h3>
+      <h2 style="font-family: 'Syncopate', fantasy; font-weight: 10;">I'm R0xy</h2>
+      <h3 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">an Aspiring IT Student &nbsp</h3>
         <hr style="width: 50%; background-color: #E83951; border-color: #E83951;">
     <a href="https://www.linkedin.com/in/ry0x7/" style="color: white;"><i class="fab fa-linkedin" style="font-size: 2em;"></i></a>
     &nbsp
