--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous" type="text/css">
-  <!-- remember, jQuery is completely optional -->
-  <!-- <script type='text/javascript' src='js/jquery-1.11.1.min.js'></script> -->
+  <script type='text/javascript' src='js/jquery-1.11.1.min.js'></script>
   <script type="text/javascript" src="js/jquery.particleground.js"></script>
   <script type="text/javascript" src="js/demo.js"></script>
 </head>
@@ -18,11 +17,11 @@
 
 <div id="particles">
   <div id="intro">
-    <h3 style="font-family: 'Courier New', monospace; font-weight: 10;">Hello👋&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h3>
+    <h3 style="font-family: 'Courier New', monospace; font-weight: 10; margin-right: 120px;">Hello there!<img src="https://raw.githubusercontent.com/MartinHeinz/MartinHeinz/master/wave.gif" alt="Just Image" height="30px"></h3>
       <h2 style="font-family: 'Syncopate', fantasy; font-weight: 10;">I'm R0xy</h2>
       <h3 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">an Aspiring IT Student &nbsp</h3>
-        <hr style="width: 50%; background-color: #E83951; border-color: #E83951;">
-    <a href="https://www.linkedin.com/in/ry0x7/" style="color: white;"><i class="fab fa-linkedin" style="font-size: 2em;"></i></a>
+      <hr style="height:2px;color:#3192ed;background-color:#3192ed; width:35%; margin-left: auto; margin-right: auto;">
+      <a href="https://www.linkedin.com/in/ry0x7/" style="color: white;"><i class="fab fa-linkedin" style="font-size: 2em;"></i></a>
     &nbsp
     <a href="https://www.facebook.com/chrisssry/" style="color: white;"><i class="fab fa-facebook" style="font-size: 2em;"></i></a>
     &nbsp
