--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!doctype html>
 <html lang="en" class="no-js">
 <head>
+  <meta property=’og:title’ content='Welcome to R0xy'/>
+  <meta property=’og:image’ content='https://avatars.githubusercontent.com/u/114163466?v=4'/>
+  <meta property=’og:description’ content='An Aspiring IT student'/>
+  <meta property=’og:url’ content='https://www.r0xy.tech/'/>
+  <meta property='og:image:width' content='1200' />
+  <meta property='og:image:height' content='627' />
+  <meta property="og:type" content='webportal'/>
+
   <base target="_blank">
   <meta charset="UTF-8" />
   <title>R0xy | Developer</title>
