--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="no-js">
 <head>
   <meta property=’og:title’ content='Welcome to R0xy'/>
-  <meta property=’og:image’ content='https://avatars.githubusercontent.com/u/114163466?v=4'/>
+  <meta property=’og:image’ content='/assets/thumbnail.png'/>
   <meta property=’og:description’ content='An Aspiring IT student'/>
   <meta property=’og:url’ content='https://www.r0xy.tech/'/>
   <meta property='og:image:width' content='1200' />
