--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html lang="en" class="no-js">
 <head>
-  <meta property=’og:title’ content='Welcome to R0xy'/>
-  <meta property=’og:image’ content='assets/thumbnail.png'/>
-  <meta property=’og:description’ content='An Aspiring IT student'/>
-  <meta property=’og:url’ content='https://www.r0xy.tech/'/>
-  <meta property='og:image:width' content='1200' />
-  <meta property='og:image:height' content='627' />
-  <meta property="og:type" content='webportal'/>
+  <meta property="og:title" content="Welcome to R0xy"/>
+  <meta property="og:image" content="https://i.ibb.co/WKKhJrN/image.png"/>
+  <meta property="og:description" content="An Aspiring IT student"/>
+  <meta property="og:url" content="https://www.r0xy.tech/"/>
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="627" />
+  <meta property="og:type" content="website"/>
 
   <base target="_blank">
   <meta charset="UTF-8" />
